Update haversine distance presentation

--- a/notebooks/ships/ship data exploration.ipynb
+++ b/notebooks/ships/ship data exploration.ipynb
@@ -1713,12 +1713,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Haversince Distances: incremental and cumulative"
+    "# Haversine Distances: incremental and cumulative"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false
    },
@@ -1731,6 +1731,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>datestring</th>\n",
        "      <th>longLat</th>\n",
        "      <th>incrementalDistanceKm</th>\n",
        "      <th>cumulativeDistanceKm</th>\n",
@@ -1739,30 +1740,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2014-08-31 16:03:33</td>\n",
        "      <td>(-0.071837, 53.579707)</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3156</th>\n",
+       "      <td>2014-08-31 16:06:20</td>\n",
        "      <td>(-0.071832, 53.5797)</td>\n",
        "      <td>0.000845</td>\n",
        "      <td>0.000845</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6990</th>\n",
+       "      <td>2014-08-31 16:09:20</td>\n",
        "      <td>(-0.071833, 53.579705)</td>\n",
        "      <td>0.000560</td>\n",
        "      <td>0.001405</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10915</th>\n",
+       "      <td>2014-08-31 16:12:21</td>\n",
        "      <td>(-0.071827, 53.579693)</td>\n",
        "      <td>0.001392</td>\n",
        "      <td>0.002797</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14584</th>\n",
+       "      <td>2014-08-31 16:15:21</td>\n",
        "      <td>(-0.071827, 53.5797)</td>\n",
        "      <td>0.000778</td>\n",
        "      <td>0.003576</td>\n",
@@ -1772,26 +1778,33 @@
        "</div>"
       ],
       "text/plain": [
-       "                      longLat  incrementalDistanceKm  cumulativeDistanceKm\n",
-       "0      (-0.071837, 53.579707)               0.000000              0.000000\n",
-       "3156     (-0.071832, 53.5797)               0.000845              0.000845\n",
-       "6990   (-0.071833, 53.579705)               0.000560              0.001405\n",
-       "10915  (-0.071827, 53.579693)               0.001392              0.002797\n",
-       "14584    (-0.071827, 53.5797)               0.000778              0.003576"
+       "               datestring                 longLat  incrementalDistanceKm  \\\n",
+       "0     2014-08-31 16:03:33  (-0.071837, 53.579707)               0.000000   \n",
+       "3156  2014-08-31 16:06:20    (-0.071832, 53.5797)               0.000845   \n",
+       "6990  2014-08-31 16:09:20  (-0.071833, 53.579705)               0.000560   \n",
+       "10915 2014-08-31 16:12:21  (-0.071827, 53.579693)               0.001392   \n",
+       "14584 2014-08-31 16:15:21    (-0.071827, 53.5797)               0.000778   \n",
+       "\n",
+       "       cumulativeDistanceKm  \n",
+       "0                  0.000000  \n",
+       "3156               0.000845  \n",
+       "6990               0.001405  \n",
+       "10915              0.002797  \n",
+       "14584              0.003576  "
       ]
      },
-     "execution_count": 138,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "oneShip.loc[:, ['longLat', 'incrementalDistanceKm', 'cumulativeDistanceKm']].head()"
+    "oneShip.loc[:, ['datestring', 'longLat', 'incrementalDistanceKm', 'cumulativeDistanceKm']].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 144,
    "metadata": {
     "collapsed": false
    },
@@ -1804,6 +1817,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>datestring</th>\n",
        "      <th>longLat</th>\n",
        "      <th>incrementalDistanceKm</th>\n",
        "      <th>cumulativeDistanceKm</th>\n",
@@ -1812,30 +1826,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1000571</th>\n",
+       "      <td>2014-09-01 11:14:24</td>\n",
        "      <td>(0.671697, 53.470618)</td>\n",
        "      <td>1.128934</td>\n",
        "      <td>54.985451</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1003232</th>\n",
+       "      <td>2014-09-01 11:17:51</td>\n",
        "      <td>(0.647547, 53.444705)</td>\n",
        "      <td>3.295290</td>\n",
        "      <td>58.280741</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1012798</th>\n",
+       "      <td>2014-09-01 11:29:43</td>\n",
        "      <td>(0.684068, 53.485382)</td>\n",
        "      <td>5.128616</td>\n",
        "      <td>63.409357</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1025280</th>\n",
+       "      <td>2014-09-01 11:45:33</td>\n",
        "      <td>(0.707017, 53.516108)</td>\n",
        "      <td>3.738563</td>\n",
        "      <td>67.147920</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1048320</th>\n",
+       "      <td>2014-09-01 12:13:53</td>\n",
        "      <td>(0.747457, 53.556685)</td>\n",
        "      <td>5.244023</td>\n",
        "      <td>72.391942</td>\n",
@@ -1845,21 +1864,28 @@
        "</div>"
       ],
       "text/plain": [
-       "                       longLat  incrementalDistanceKm  cumulativeDistanceKm\n",
-       "1000571  (0.671697, 53.470618)               1.128934             54.985451\n",
-       "1003232  (0.647547, 53.444705)               3.295290             58.280741\n",
-       "1012798  (0.684068, 53.485382)               5.128616             63.409357\n",
-       "1025280  (0.707017, 53.516108)               3.738563             67.147920\n",
-       "1048320  (0.747457, 53.556685)               5.244023             72.391942"
+       "                 datestring                longLat  incrementalDistanceKm  \\\n",
+       "1000571 2014-09-01 11:14:24  (0.671697, 53.470618)               1.128934   \n",
+       "1003232 2014-09-01 11:17:51  (0.647547, 53.444705)               3.295290   \n",
+       "1012798 2014-09-01 11:29:43  (0.684068, 53.485382)               5.128616   \n",
+       "1025280 2014-09-01 11:45:33  (0.707017, 53.516108)               3.738563   \n",
+       "1048320 2014-09-01 12:13:53  (0.747457, 53.556685)               5.244023   \n",
+       "\n",
+       "         cumulativeDistanceKm  \n",
+       "1000571             54.985451  \n",
+       "1003232             58.280741  \n",
+       "1012798             63.409357  \n",
+       "1025280             67.147920  \n",
+       "1048320             72.391942  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "oneShip.loc[:, ['longLat', 'incrementalDistanceKm', 'cumulativeDistanceKm']].tail()"
+    "oneShip.loc[:, ['datestring', 'longLat', 'incrementalDistanceKm', 'cumulativeDistanceKm']].tail()"
    ]
   },
   {
