Fix notebook version's tuningMode output control

--- a/notebooks/sessionizer/sessionizer.ipynb
+++ b/notebooks/sessionizer/sessionizer.ipynb
@@ -176,7 +176,7 @@
     "        # Save goal score\n",
     "        self.summedGoal += result[\"score\"]\n",
     "        \n",
-    "        if self.debug | (tuningMode == False):\n",
+    "        if self.debug & (tuningMode == False):\n",
     "            print(\"Emit Session:\")\n",
     "            \n",
     "        outputString = \"D%i\\t\\t%i\\t\\t%i\\t\\tA%i\\t\\t[%.2f|%.2e]\" % (result[\"deviceId\"],\n",
