Updated some documentation

--- a/notebooks/examples/product+as+summation+of+logs.ipynb
+++ b/notebooks/examples/product+as+summation+of+logs.ipynb
@@ -4,14 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Product as summation\n",
+    "# Product as summation\n",
+    "\n",
+    "A product of values can be treated as a summation of the logs of the values due to the following log identity:\n",
+    "* $log(ab) = log(a)+log(b)\n",
+    "\n",
+    "This can useful for SQL aggregations where a product operation not supported.\n",
+    "\n",
+    "Algorithm\n",
     "1. apply a log to all values\n",
     "    * values must be > 0, this is violated by logodds which centers scores around 0.5\n",
     "        * add tiny value if the value is supposed to be zero\n",
     "        * make value positive if it is negative\n",
     "1. add all the values together\n",
     "1. undo the log transform using and exponentiation\n",
-    "1. apply flip the sign if necessary to undo the sign flipping we did prior to the log tranform "
+    "1. apply flip the sign if necessary to undo the sign flipping we did prior to the log tranform \n",
+    "\n"
    ]
   },
   {
