correct latex in documentation

--- a/notebooks/examples/product+as+summation+of+logs.ipynb
+++ b/notebooks/examples/product+as+summation+of+logs.ipynb
@@ -7,7 +7,7 @@
     "# Product as summation\n",
     "\n",
     "A product of values can be treated as a summation of the logs of the values due to the following log identity:\n",
-    "* $log(ab) = log(a)+log(b)\n",
+    "* $log(ab) = log(a)+log(b)$\n",
     "\n",
     "This can useful for SQL aggregations where a product operation not supported.\n",
     "\n",
